Archive2/cf/bc9797b8eec857/output
In file included from main.cpp:1:
In file included from /usr/local/include/boost/asio.hpp:20:
In file included from /usr/local/include/boost/asio/async_result.hpp:18:
In file included from /usr/local/include/boost/asio/detail/config.hpp:26:
In file included from /usr/local/include/boost/config.hpp:40:
In file included from /usr/local/include/boost/config/select_stdlib_config.hpp:37:
In file included from /usr/local/include/boost/config/no_tr1/utility.hpp:21:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/utility:70:
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_pair.h:113:9: error: array initializer must be an initializer list or string literal
      : first(__a), second(__b) { }
        ^
main.cpp:24:16: note: in instantiation of member function 'std::pair<unsigned char const[4], std::list<int, std::allocator<int> > >::pair' requested here
    map.insert({ {}, {} });
               ^
1 error generated.
